[project]
name = "layer-flow"
version = "0.1.0"
description = "Deep learning without Training"
readme = "README.md"
authors = [
    { name = "Max Seeliger", email = "maximilian.seeliger@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jax[cuda12]>=0.5.3",
    "jupyter>=1.1.1",
    "lightning>=2.5.2",
    "matplotlib>=3.10.1",
    "pyqt6>=6.8.1",
    "ruff>=0.11.8",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tensorboard>=2.19.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "ucimlrepo>=0.0.7",
]

[project.scripts]
layer-flow = "layer_flow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
